ReactViteServer/src/App.css
/* ... */
.lobby {
  color: #D9D9D9;
  display: flex;
  flex-direction: column;
  justify-items: start;
  align-items: start;
}

.game_geometry {
  width: 1260px;
  height: 800px;
  margin-left: 10px;
  border-radius: 5px;
  position: relative;
}

.griddd {
  max-width: 1260px !important;
  display: grid;
  grid-template-columns: repeat(auto-fill, 630px);
  grid-template-rows: repeat(10, 80px);
  overflow-x: auto;
}

.user_count {
  margin: 0px !important;
  font-size: 250px;
  line-height: 250px;
}

.room_id{
  font-size: 125px;
  line-height: 125px;
  color: #709B95;
}

.room_helptext{
  font-size: 36px;
  line-height: 36px;
  opacity: 20%;
}

.start_button{
  margin-left: 10px;
  margin-top: 40px;
  padding-right: 400px;
  position: absolute;
  bottom: 0px;
  color: #D9D9D9 !important;
  border-color: #D9D9D9 !important;
}

.user_card {
  background-color: #B0B0B0;
  border-radius: 5px;
  color: #242424;
  padding: 10px 15px;
  font-size: 36px;
  margin: 10px;
}

.user_card_wrapper {
  display: flex;
  flex-wrap: wrap;
  width: 1260px;
  max-height: 450px;
  overflow-y: auto;
}
.gray_scroll::-webkit-scrollbar-track {
  border-color: #B0B0B0;
}

.gray_scroll::-webkit-scrollbar-thumb {
  background-color: #B0B0B0;
}

.white_scroll::-webkit-scrollbar-track {
  border-color: #D9D9D9;
}

.white_scroll::-webkit-scrollbar-thumb {
  background-color: #D9D9D9;
}

.black_scroll::-webkit-scrollbar-track {
  border-color: #242424;
}

.black_scroll::-webkit-scrollbar-thumb {
  background-color: #242424;
}

.question_title {
  height: 140px;
  font-size: 36px;
  line-height: 40px;
  color: #242424;
  padding-left: 20px;
  max-width: 1150px;
  z-index: 20;
  overflow-y: auto;
  overflow-x: hidden;
  margin-bottom: 10px;
  text-align: start;
  vertical-align: super;
}

.right_arrow.right_arrow {
  position: absolute;
  left: -10px;
}

.pdtp{
  max-height: 50px !important;
  max-height: 50px !important;
}

.arrowsvg.arrowsvg{
  height: 40px;
  width: 40px;
}

.question_numbers{
  position: absolute;
  right: 20px;
  top: 100px;
  font-size: 36px;
  text-align: end;
  color: #242424;
}

.question_next_btn{
  color: #242424 !important;
  border-color: #242424;
  padding-right: 130px;
  margin-top: 10px;

  height: 50px !important;
  max-height: 50px !important;
  min-height: 50px !important;
  width: 50px !important;
  max-width: 50px !important;
  min-width: 50px !important;
  padding: 0px;
  padding-left: 9px;
  padding-top: 7px;

  position: absolute;
  right: -60px;
  top: 440px;
}
.question_next_btn:hover{
  padding-left: 7px;
}


.question {
  height: 620px;
  background-color: #242424;
  color: #d68b81;
  border-radius: 5px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 15px;
  justify-content: center;
  align-items: center;
  padding: 15px;
}

.answer {
  color: #242424;
  font-size: 36px;
  height: 100%;
  border-radius: 5px;
  display: flex;
  justify-content: start;
  padding-left: 50px;
  align-items: center;
  position: relative;
}

.space_top_timer {
  margin-top: 150px;
  height: 640px;
}

.letter_1 {
  position: absolute;
  top: 10px;
  left: 20px;
}

.letter_2 {
  position: absolute;
  top: 10px;
  right: 20px;
}

.letter_3 {
  position: absolute;
  bottom: 10px;
  left: 20px;
}

.letter_4 {
  position: absolute;
  bottom: 10px;
  right: 20px;
}

.clock {
  position: absolute;
  top: 425px;
  left: 580px;
  background-color: #242424;
  border-radius: 5px;
  width: 100px;
  height: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 36px;
}

.debug_string {
  color: red !important;
  position: absolute;
  bottom: 20px;
  font-size: 10px;
}

.white_bg {
  background-color: #D9D9D9;
  color: #242424;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.space_top {
  margin-top: 75px;
}

.answer_tag{
  height: 50px;
  width: 50px;
}

.flex_row{
  display: flex;
}

.enlarge{
  position: absolute;
  height: 500px;
  width: 500px;
}

.input_area{
  margin-bottom: 20px;
  background-color: #B0B0B0;
  border-radius: 5px;
  min-width: 310px;
  min-height: 70px;
  text-align: left;
  border: 0px;
  font-family: inherit;
  font-size: 26px;
  color: #242424;
  padding-left: 20px;
  resize: none;
}

.small {
  all: unset;
  box-sizing: border-box;
  width: 30px !important;
  max-height: 70px;
  margin-left: 5px;
  border: 2px solid;
  border-radius: 5px;
  margin-left: 13px;
}

.small_input{
  all: unset;
  margin-bottom: 20px;
  background-color: #B0B0B0;
  border-radius: 5px;
  width: 190px;
  min-height: 70px;
  text-align: left;
  border: 0px;
  font-family: inherit;
  font-size: 26px;
  color: #242424;
  padding-left: 20px;
}

.small_a_to_normal {
  all: unset;
}
.small_a_to_normal:hover {
  all: unset;
}

.constraint{
  max-height: 170px;
  overflow: auto;
  scrollbar-width: none !important;
  overflow-x: hidden;
}

.constraint::-webkit-scrollbar {
  width: 12px;
}

.constraint::-webkit-scrollbar-track {
  border: 2px solid;
  border-radius: 5px;
  }

.constraint::-webkit-scrollbar-thumb {
  background-color: #D6BF81;
  border-radius: 5px;
}

.small_textarea{
  all: unset;
  margin-bottom: 10px;
  background-color: #B0B0B0;
  border-radius: 5px;
  width: 250px;
  min-height: 70px;
  text-align: left;
  border: 0px;
  font-family: inherit;
  font-size: 26px;
  color: #242424;
  padding-left: 20px;
}

.adder {
  width: 490px;
  border: 2px solid;
  border-radius: 5px;
  padding: 20px;
  padding-right: 10px;
  margin-top: 20px;
}

.text_login{
  width: 315px;
  text-align: start !important;
  padding-left: 20px;
}

.text_question{
  font-size: 26px;
  text-align: start;
  padding-top: 10px;
  margin-left: 20px;
  margin-bottom: 20px !important;
}

.long_input{
  min-width: 420px !important;
  max-width: 420px !important;
}

.width_to_fit{
  min-width: 440px !important;
  max-width: 440px !important;
}

.space_bottom{
  margin-bottom: 30px;
}
/* ... */

